ci/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: hello
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-http
  namespace: hello
spec:
  entryPoints:
    - web
  routes:  
    - kind: Rule
      match: Host(`liuronghao.com`)  && (PathPrefix(`/webhook/test`)
      services:
        - kind: Service
          name: el-hello-listener
          port: 8080
      middlewares:
        - name: hello-redirectscheme@kubernetescrd

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-https
  namespace: hello
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`liuronghao.com`)  && PathPrefix(`/webhook/test`)
      services:
        - name: el-hello-listener 
          port: 8080
  tls:
    certResolver: le
    domains:
      - main: liuronghao.com
    options:
      name: tlsoptions
